--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
   <script src="src/components/videoListEntry.js"></script>
   <script src="src/components/videoList.js"></script>
   <script src="src/components/chatterBox.js"></script>
+  <script src="src/components/textMessage.js"></script>
 </body>
 </html>
